[package]
name = "VoxelCraft"
version = "0.1.0"
authors = [" EternalMC <jamesdrothermel@gmail.com> "]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
rand = "0.7.3"
amethyst_physics = "0.2.0"
amethyst_nphysics = "0.2.0"

[features]
empty = ["amethyst/empty"]
vulkan = ["amethyst/vulkan"]
default = ["vulkan"]

